# neuro-lesion-cpp

./: .claude.json.backup.1774199011766  .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
.github/workflows/: build.yml  ci.yml
include/: nifti1.h  znzlib.c  znzlib.h
src/: InferenceEngine.cpp  InferenceEngine.h  NiftiIO.cpp  NiftiIO.h  Postprocessor.cpp  Postprocessor.h  Preprocessor.cpp  Preprocessor.h  main.cpp  test_postprocessor.cpp  test_preprocessor.cpp
tests/: test_postprocessor.cpp
training/: README.md
